--- a/app/views/posts/index.js.erb
+++ b/app/views/posts/index.js.erb
@@ -1,1 +1,1 @@
-$(".info-by-date").html("<div><%= @post.title%></div><div><%= @post.content%></div><div><img src='<%= @post.image.main %>'></div>");
+$(".info-by-date").html("<div><%= @post.title%></div><div><%= @post.content%></div><div><img src='<%= @post.image.main %>'></div>").hide().fadeIn(500);
