--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,14 +22,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :x %>
-    <%= form.number_field :x, id: :post_x , step: :any%>
+    <%= form.hidden_field :x, id: :post_x , step: :any, value: @lat%>
   </div>
 
   <div class="field">
-    <%= form.label :y %>
-    <%= form.number_field :y, id: :post_y , step: :any%>
+    <%= form.hidden_field :y, id: :post_y , step: :any, value: @lng%>
   </div>
+
 
   <div class=“field”>
     <%= form.label :image %>
