--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,158 @@
  *= require_tree .
  *= require_self
  */
+ @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+* {
+    box-sizing:border-box;
+    font-family: 'Song Myung', serif;
+}
+ nav {
+     height:9vh;
+ }
+ .title {
+     background-image:url("foodtruck_logo.jpg;");
+ 
+ }
+ 
+ 
+ body {
+     font-family: 'Poppins', sans-serif;
+     background: #fafafa;
+     background-image: url("food.jpeg");
+ }
+ 
+ p {
+     font-family: 'Poppins', sans-serif;
+     font-size: 1.1em;
+     font-weight: 300;
+     line-height: 1.7em;
+     color: #999;
+ }
+ 
+ a, a:hover, a:focus {
+     color: inherit;
+     text-decoration: none;
+     transition: all 0.3s;
+ }
+ 
+ #sidebar {
+     /* don't forget to add all the previously mentioned styles here too */
+
+     color: #fff;
+     transition: all 0.3s;
+ 
+ }
+ 
+ #sidebar .sidebar-header {
+     padding: 20px;
+ 
+ }
+ 
+ #sidebar ul.components {
+     padding: 20px 0;
+     border-bottom: 1px solid#fff;
+ }
+ 
+ #sidebar ul p {
+     color: #fff;
+     padding: 10px;
+ }
+ 
+ #sidebar ul li a {
+     padding: 10px;
+     font-size: 1.1em;
+     display: block;
+ }
+ #sidebar ul li a:hover {
+
+     background: #fff;
+ }
+ 
+ #sidebar ul li.active > a, a[aria-expanded="true"] {
+     color: #fff;
+
+ }
+ ul ul a {
+     font-size: 0.9em !important;
+     padding-left: 30px !important;
+    
+ }
+ 
+ 
+ /*새로-----*/
+ .wrapper {
+     display: flex;
+     align-items: stretch;
+     float: left;
+ }
+ 
+ #sidebar.active {
+     margin-left: -17vw;
+ }
+ 
+ 
+ 
+ #sidebar {
+     min-width: 17vw;
+     max-width: 17vw;
+     min-height: 100vh;
+ }
+ 
+ 
+ 
+ a[data-toggle="collapse"] {
+     position: relative;
+ }
+ 
+ .dropdown-toggle::after {
+     display: block;
+     position: absolute;
+     top: 50%;
+     right: 20px;
+     transform: translateY(-50%);
+ }
+ 
+ 
+ 
+ @media (max-width: 768px) {
+     #sidebar {
+         margin-left: -17vw;
+     }
+     #sidebar.active {
+         margin-left: 0;
+     }
+ }
+ 
+ .main{
+     overflow: visible;
+ }
+ 
+ .wrapper2{
+     float: left;
+ }
+ 
+ #map {
+     height: 90vh;  /* The height is 400 pixels */
+     width: 50vw; /* The width is the width of the web page */
+ }
+ 
+ /* .wrapper3{
+     width: 30vw;
+     height: 90vh;
+     float: left;
+     margin:0.5vw;
+     margin-top:0px;
+    
+ } */
+ 
+ .info-by-date{
+     margin-top:20px;
+     border-radius: 5%;
+     height: auto;
+     margin:10px;
+     border: 2px solid white;
+     font-family: 'Song Myung', serif;
+     color: black;
+     text-align: center;
+     font-size:20px;
+ }
