--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,21 @@
+<head>
+    <link rel= "stylesheet" type="text/css" href="stylesheets/_form_new.css"/>
+    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Stylish|Yatra+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Song+Myung|Stylish" rel="stylesheet">
+</head>
+
+
+
+<body>
+  <div class = "background2">
+    <div class = "blank">
+    
+    </div>
+
+  <h2 style="font-family:'Song Myung', serif; color:white;">NEW POST</h2>
+
+  <div class="login d-flex flex-column justify-content-between">
 <%= form_with(model: post, local: true) do |form| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
@@ -10,6 +28,7 @@
       </ul>
     </div>
   <% end %>
+
 
   <div class="field">
     <%= form.label :title %>
@@ -30,7 +49,7 @@
   </div>
 
 
-  <div class=“field”>
+  <div class=“field_img”>
     <%= form.label :image %>
     <%= form.file_field :image, accept: "image/png,image/gif,image/jpeg" %>
   </div>
@@ -40,4 +59,7 @@
   <div class="actions">
     <%= form.submit %>
   </div>
+  </div>
+
+</body>
 <% end %>
